--- a/public/spectator/index.html
+++ b/public/spectator/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-      <meta charset="utf-8" />
-      <link rel="shortcut icon" href="./favicon.ico" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta
-        name="description"
-        content="RSL - Convocation Spectator"
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="./favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="RSL - Convocation Spectator"
       />
-      <link rel="apple-touch-icon" href="../logo192.png" />
-      <title>Convocation Spectator</title>
+    <link rel="apple-touch-icon" href="../logo192.png" />
+    <title>Convocation Spectator</title>
 
-      <link rel="stylesheet" type="text/css" href="spectator-style.css" />
+    <link rel="stylesheet" type="text/css" href="spectator.css" />
   </head>
 
   <body>
     <div id="container">
-      <h1><strong>Program - </strong></h1><h2><strong><span id="program" /></strong></h2>
-      <h1><strong>Last - </strong></h1><h3><strong><span id="last" /></strong></h3>
-      <h1><strong>Current - </strong></h1><h3><strong><span id="current" /></strong></h3>
-      <h1><strong>Next - </strong></h1><h3><strong><span id="next" /></strong></h3>
-    </div>
-    <script type="text/javascript" src="spectator.js"></script>
-  </body>
-</html>
+      <h1><strong>[Program]<br/><span id="program" /></strong></h1>
+          <h1><strong>[Last]<br/><span id="last" /></strong></h1>
+              <h1><strong>[Current]<br/><span id="current" /></strong></h1>
+                  <h1><strong>[Next]<br/><span id="next" /></strong></h1>
+                    </div>
+                    <script type="text/javascript" src="spectator.js"></script>
+                  </body>
+                </html>
