(feat): improve spectator styling

--- a/public/spectator/index.html
+++ b/public/spectator/index.html
@@ -16,11 +16,11 @@
 
   <body>
     <div id="container">
-      <h1><strong>[Program]<br/><span id="program" /></strong></h1>
-          <h1><strong>[Last]<br/><span id="last" /></strong></h1>
-              <h1><strong>[Current]<br/><span id="current" /></strong></h1>
-                  <h1><strong>[Next]<br/><span id="next" /></strong></h1>
-                    </div>
-                    <script type="text/javascript" src="spectator.js"></script>
-                  </body>
-                </html>
+      <strong><span id="connMsg" class="disconnect" />Disconnected...</strong>
+        <h1><strong>[Program]<br/><span id="program" /></strong></h1>
+            <h1><strong>[Current]<br/><span id="current" /></strong></h1>
+                <h1><strong>[Next]<br/><span id="next" /></strong></h1>
+                  </div>
+                  <script type="text/javascript" src="spectator.js"></script>
+                </body>
+              </html>
