--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="./favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="RSL - Convocation Controller"
-    />
+      />
     <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Convocation Controller</title>
   </head>
   <body>
@@ -17,4 +17,3 @@
     <div id="root"></div>
   </body>
 </html>
-
